# log_library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in
examples/: CMakeLists.txt
examples/c90/: CMakeLists.txt
examples/c90/src/: main.c
examples/cpp11/: CMakeLists.txt
examples/cpp11/src/: main.cc
examples/cpp98/: CMakeLists.txt
examples/cpp98/src/: main.cc
examples/cpp_exception/: CMakeLists.txt
examples/cpp_exception/src/: main.cc
examples/file_size_tracking/: CMakeLists.txt
examples/file_size_tracking/src/: main.cc
examples/log_to_file/: CMakeLists.txt
examples/log_to_file/src/: main.cc
examples/semaphore_file_tracking/: CMakeLists.txt
examples/semaphore_file_tracking/src/: main.cc
examples/semaphore_file_tracking/static_library/: CMakeLists.txt
examples/semaphore_file_tracking/static_library/include/: library.hh
examples/semaphore_file_tracking/static_library/src/: library.cc
examples/std_container/: CMakeLists.txt
examples/std_container/src/: main.cc
examples/tag_support/: CMakeLists.txt
examples/tag_support/src/: main.cc
include/: logger.h  logger.hh
src/: main.cc
